--- a/Style.css
+++ b/Style.css
@@ -33,3 +33,9 @@ body {
           color: var(--branco-principal);
           display: block;
 }
+
+.botao_secundario {
+
+background-color: transparent;
+border: 2px solid var(--branco-principal)
+}
